some tests added and some change in controllers