@@ -18,6 +18,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -29,9 +30,11 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
                                                                 HttpHeaders headers,
                                                                 HttpStatus status, WebRequest request) {
     List<String> errors = ex.getBindingResult().getFieldErrors()
-            .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).toList();
-    return new ResponseEntity<>(getBody(HttpStatus.NOT_FOUND, errors.toString()), HttpStatus.NOT_FOUND);
+            .stream().map(DefaultMessageSourceResolvable::getDefaultMessage).collect(Collectors.toList());
+    return new ResponseEntity<>(getBody(HttpStatus.BAD_REQUEST, errors), HttpStatus.BAD_REQUEST);
   }
+
+
 
   @ExceptionHandler(EntityNotFoundException.class)
     public final ResponseEntity<Object> handleEntityNotFoundException(Exception ex) {
@@ -50,7 +53,7 @@ public class GlobalControllerAdvice extends ResponseEntityExceptionHandler {
   }
 
 
-  private Map<Object, Object> getBody(HttpStatus status, String message) {
+  private Map<Object, Object> getBody(HttpStatus status, Object message) {
     Map<Object, Object> body = new LinkedHashMap<>();
     body.put("timestamp", Instant.now());
     body.put("status", status.value());
